@@ -1,5 +1,9 @@
 2008-11-24  Robert Staudinger  <robsta@gnome.org>
 
+	* examples/example-4.c (expose_cb): improve example.
+
+2008-11-24  Robert Staudinger  <robsta@gnome.org>
+
 	* examples/example-4.c (font_family_new), (font_family_free),
 	(font_family_convert), (peek_property_class), (expose_cb), (main):
 	Illustrate use of custom properties.
